<?xml version="1.0"?>
<package format="2">
  <name>open_manipulator_simulations</name>
  <version>0.1.1</version>
  <description>
    Simulation packages for OpenManipulator
  </description>
  <license>Apache 2.0</license>
  <author email="thlim@robotis.com">Darby Lim</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/open_manipulator_simulations/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator_simulations</url>
  <url type="website">http://emanual.robotis.com/docs/en/platform/openmanipulator</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>open_manipulator_gazebo</exec_depend>
  <export><metapackage/></export>
</package>
